<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginLeft="50dp"
            android:text="Edit Staff Details"
            android:textSize="30dp"
            android:textColor="@color/coloradminpage"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />


        <EditText
            android:id="@+id/usernameupdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="username"
            />
        <EditText
            android:id="@+id/emailupdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="email"
            />
        <EditText
            android:id="@+id/firstnameupdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="firstname"
            />
        <EditText
            android:id="@+id/lastnameupdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="lastname"
            />
        <EditText
            android:id="@+id/positionupdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="position"
            />
        <EditText
            android:id="@+id/addressupdate"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="address"
            />
        <EditText
            android:id="@+id/genderupdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="gender"
            />
        <EditText
            android:id="@+id/phoneupdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            android:ems="10"
            android:hint="phone"
            />

        <EditText
            android:id="@+id/salaryupdate"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            />
        <EditText
            android:id="@+id/passwordupdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_desc"
            >

        </EditText>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:background="@drawable/updatebtn"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_update" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/deletbtn"
                android:text="@string/btn_delete" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="100dp" />
        </LinearLayout>




    </LinearLayout>
</ScrollView>